# exact-ccd

./: .gitignore  CMakeLists.txt  ReadMe-bsc.txt  bsc.cpp  bsc.h  expansion.cpp  expansion.h  interval.cpp  interval.h  rootparitycollisiontest.cpp
